--- a/src/index.css
+++ b/src/index.css
@@ -43,3 +43,15 @@
 .color-danger:focus {
   background-color: #9a0007;
 }
+
+.sm {
+  padding: 6px 12px;
+}
+
+.md {
+  padding: 8px 16px;
+}
+
+.lg {
+  padding: 11px 22px;
+}
