--- a/src/index.css
+++ b/src/index.css
@@ -3,20 +3,20 @@
   src: url(fonts/NotoSansJP-Medium.otf);
 }
 
-* {
+/* *Base style */
+button {
   box-sizing: border-box;
   font-family: 'Noto';
+  border: none;
+  border-radius: 0.25rem;
 }
 
-.color-primary {
-  background-color: #2962ff;
+/* *Shadow definition */
+.shadow {
+  box-shadow: 0 2px 3px rgba(0, 0, 0, 0.2);
 }
 
-.color-primary:hover,
-.color-primary:focus {
-  background-color: #0039cb;
-}
-
+/* *Color definition */
 .color-default {
   background-color: #e0e0e0;
 }
@@ -26,8 +26,19 @@
   background-color: #aeaeae;
 }
 
+.color-primary {
+  background-color: #2962ff;
+  color: white;
+}
+
+.color-primary:hover,
+.color-primary:focus {
+  background-color: #0039cb;
+}
+
 .color-secondary {
   background-color: #455a64;
+  color: white;
 }
 
 .color-secondary:hover,
@@ -37,6 +48,8 @@
 
 .color-danger {
   background-color: #d32f2f;
+  color: white;
+  color: white;
 }
 
 .color-danger:hover,
@@ -44,6 +57,7 @@
   background-color: #9a0007;
 }
 
+/* *Size definition */
 .sm {
   padding: 6px 12px;
 }
