--- a/src/index.css
+++ b/src/index.css
@@ -8,11 +8,25 @@ button {
   box-sizing: border-box;
   font-family: 'Noto';
   border: none;
-  border-radius: 0.25rem;
+  border-radius: 6px;
+  padding: 8px 16px;
 }
 
 .no-shadow {
   box-shadow: none !important;
+}
+
+/* *Disabled attribute */
+.disabled {
+  background-color: #e0e0e0 !important;
+  color: #9e9e9e;
+  pointer-events: none;
+}
+
+.disabled-text {
+  background-color: transparent;
+  color: #9e9e9e;
+  pointer-events: none;
 }
 
 /* *Variant definition */
